    - cache semantic results until next edit
    - break endless loop due to unresolved selective import
    - fix for no expansions for symbols from public import in imported module
    - try dparser as fallback if goto definition on import fails
    - fix exception in isExpression

2017-08-06 Version 0.45.1

  * now building against the VC runtime (-m32mscoff) instead of the DigitalMars runtime to avoid 
    anti-virus programs blocking the installation or execution
  * fix dependencies for custom build rules if file names contain spaces
  * mago: fix displaying long strings as empty
  * pipedmd: fix tracker invocation if the VS2015 version is found through PATH
  * update vsi2d to Windows SDK 10.0.15063.0
  * Visual D now buildable with VS2017
  * dparser:
    - "add import path of project dependencies": implicit import directories not passed to semantic analyzer
    - tooltip for selective imports now show the aliased definition, not the alias
    - improved tooltips: show full qualified name, show initializer for constants,
      better display for enum and aliases
    - fixed completion or tooltips sometimes not working before modifying source code

unreleased Version 0.46.0

  * cv2pdb
    - now also search VS2017 registry entries to find mspdb140.dll
    - fix working with the VS2017 update 15.3.1
  * add workaround for broken TLS when linking with link.exe from VS2017 update 15.3.1
  * improve handling of non-ASCII installation paths:
    - use unicode aware version of NSIS, register through wide string API of rundll32
    - parse sc.ini with current code page
    - pipedmd: pass wide string command line to sub process
    - convert MS linker response file to UTF16
  * build single object file to intermediate directory rather than output folder
  * custom build batch files now written to intermediate directory
  * dparser:
    - when building with LDC, use import path from its config file instead of DMDs' sc.ini