@@ -928,6 +928,11 @@ unreleased Version 0.46.0
     - pipedmd: pass wide string command line to sub process
     - convert MS linker response file to UTF16
   * build single object file to intermediate directory rather than output folder
+  * intermediate executable for cv2pdb now written to intermediate directory
   * custom build batch files now written to intermediate directory
   * dparser:
     - when building with LDC, use import path from its config file instead of DMDs' sc.ini
+  * use "if %errorlevel% neq 0" instead of "if errorlevel 1" in batches to capture crashes, too
+  * fix default executable search path for LDC assuming a 64-bit compiler executable (avoids 
+    linker error -1073741701)
+  * added *.tlog to default files to clean
